# lora_pico

./: CMakeLists.txt  LORA_TEST_MATRIX.md  MODULATION_CONFIGS.md  RESUMAT_PROIECT.md  analyze_runs.py  blink.pio  chirp_tables.h  generate_chirp_tables.py  lora_receive_rtlsdr.py  lora_receive_tapparelj.py  multicore.c  package-lock.json
esp32_lora/: CMakeLists.txt  app.overlay  build_instructions.txt  prj.conf
esp32_lora/boards/lilygo/ttgo_t_beam/: Kconfig  Kconfig.ttgo_t_beam  board.yml  ttgo_t_beam-pinctrl.dtsi  ttgo_t_beam_esp32_appcpu.dts  ttgo_t_beam_esp32_procpu.dts  ttgo_t_beam_esp32_procpu.yaml  ttgo_t_beam_esp32_procpu_defconfig
esp32_lora/boards/lilygo/ttgo_t_beam_v1/: Kconfig  Kconfig.ttgo_t_beam_v1  board.yml  ttgo_t_beam_v1_esp32_appcpu.yaml  ttgo_t_beam_v1_esp32_appcpu_defconfig  ttgo_t_beam_v1_esp32_procpu.dts  ttgo_t_beam_v1_esp32_procpu.yaml
esp32_lora/dts/common/espressif/: partitions_0x0_amp.dtsi  partitions_0x0_amp_16M.dtsi  partitions_0x0_amp_2M.dtsi  partitions_0x0_amp_32M.dtsi  partitions_0x0_amp_4M.dtsi  partitions_0x0_amp_8M.dtsi  partitions_0x0_default.dtsi  partitions_0x0_default_16M.dtsi  partitions_0x0_default_2M.dtsi  partitions_0x0_default_32M.dtsi  partitions_0x0_default_4M.dtsi  partitions_0x0_default_8M.dtsi  partitions_0x1000_amp.dtsi  partitions_0x1000_amp_16M.dtsi  partitions_0x1000_amp_2M.dtsi  partitions_0x1000_amp_32M.dtsi  partitions_0x1000_amp_4M.dtsi  partitions_0x1000_amp_8M.dtsi  (+6 more)
esp32_lora/src/: main.c  main_backup.c
flipper_lora/: application.fam  flipper_lora.c
flipper_lora/lolra_lib/: LoRa-SDR-Code.h
(+1 files in other folders)
